1.0.4:
	TODO

1.0.3:
	- Switched behavior to report stale neighbours in addition to fresh
	  neighbours
	- Bugfixes

1.0.2:
	- Added backup implementations of potentially missing libc functions
	  (needed for dynamically-linked Tomato)
	- Bugfixes

1.0.1:
	- API call retry added (with exponential backoff)
	- Block capabilities listed in version announcement
	- Bugfixes

1.0.0:
	- Initial public release.
