@@ -1,75 +1,0 @@
-#!/bin/sh
-
-set -e
-
-VERSION="1.0"
-
-if [ $# -ne 3 ]
-then
-	echo "Usage: wiomw-start-$VERSION <USERNAME> <PASSHASH> <AGENTKEY>" >&2
-	false
-else
-	echo "Starting wiomw-start-$VERSION..." >&2
-fi
-
-USERNAME="$1"
-PASSHASH="$2"
-AGENTKEY="$3"
-
-SCP_HOME="/jffs/etc"
-SCP_SERVER="betabinaries.whoisonmywifi.net"
-SCP_USER="anon"
-SCP_PASS="wiomw"
-UNAME="`uname -srvmpi | tr '#:ABCDEFGHIJKLMNOPQRSTUVWXYZ\ \t\n' 'n.abcdefghijklmnopqrstuvwxyz_' `"
-
-if [ ! -d /jffs/etc ]
-then
-	mkdir /jffs/etc
-fi
-
-if [ ! -e /jffs/etc/wiomw.conf ]
-then
-	cd /jffs/etc
-	echo "Downloading wiomw.conf.example..." >&2
-	HOME=$SCP_HOME DROPBEAR_PASSWORD=$SCP_PASS scp $SCP_USER@$SCP_SERVER:wiomw.conf.example .
-	echo "Renaming to wiomw.conf and inserting credentials..."
-	mv wiomw.conf.example wiomw.conf
-	sed -i -e "s/^\([[:space:]]*USERNAME[[:space:]]*=[[:space:]]*\)$/\1$USERNAME/" wiomw.conf
-	sed -i -e "s/^\([[:space:]]*PASSHASH[[:space:]]*=[[:space:]]*\)$/\1$PASSHASH/" wiomw.conf
-	sed -i -e "s/^\([[:space:]]*AGENTKEY[[:space:]]*=[[:space:]]*\)$/\1$AGENTKEY/" wiomw.conf
-	chmod 400 wiomw.conf
-	cd - > /dev/null
-fi
-
-if [ ! -e /jffs/etc/wiomw-ca.crt ]
-then
-	cd /jffs/etc
-	echo "Downloading wiomw-ca.crt..."
-	HOME=$SCP_HOME DROPBEAR_PASSWORD=$SCP_PASS scp $SCP_USER@$SCP_SERVER:wiomw-ca.crt .
-	chmod 400 wiomw-ca.crt
-	cd - > /dev/null
-fi
-
-if [ ! -d /tmp/var/wwwext ]
-then
-	mkdir /tmp/var/wwwext
-fi
-
-if [ ! -d /jffs/sbin ]
-then
-	mkdir /jffs/sbin
-fi
-
-if [ ! -x /jffs/sbin/wiomw-plugin-$VERSION ]
-then
-	cd /jffs/sbin
-	echo "Downloading wiomw-plugin-$VERSION (this will take a while)..." >&2
-	HOME=$SCP_HOME DROPBEAR_PASSWORD=$SCP_PASS scp $SCP_USER@$SCP_SERVER:uname/$UNAME/wiomw-plugin-$VERSION .
-	echo "Finished downloading wiomw-plugin-$VERSION" >&2
-	chmod 500 wiomw-plugin-$VERSION
-	cd - > /dev/null
-fi
-
-echo "Starting wiomw-plugin-$VERSION..." >&2
-/jffs/sbin/wiomw-plugin-$VERSION &
-
